--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -1,4 +1,4 @@
-name: Update Rankings
+name: Update Rankings (DEBUG)
 
 on:
   schedule:
@@ -16,43 +16,53 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Detect League and Season
+        id: api_check
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
 
           MONTH=$(date +%m)
           YEAR=$(date +%Y)
-          # Determine the current football season (runs Aug to May)
           if [ "$MONTH" -lt 8 ]; then
             SEASON=$((YEAR - 1))
           else
             SEASON=$YEAR
           fi
           echo "📅 Using season: $SEASON"
-
           mkdir -p tmp
 
-          # --- UPDATED API CALL ---
-          # Changed URL from rapidapi.com to v3.api-football.com
-          # Changed header from X-RapidAPI-Key to x-apisports-key
-          # Removed X-RapidAPI-Host header
-          response=$(curl -s --request GET \
+          # --- DEBUGGING LINE ADDED: Capture HTTP status code (to check for 401/403) ---
+          # We use a temporary file to separate the body from the status code in one curl call
+          HTTP_RESPONSE=$(curl -s -o tmp/api-body.json -w "%{http_code}" \
+            --request GET \
             --url "https://v3.api-football.com/standings?season=${SEASON}&team=${TEAM_ID}" \
             --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
 
-          echo "$response" | jq . > tmp/team-response.json
+          # Rename the body file for the original jq command
+          mv tmp/api-body.json tmp/team-response.json
+          
+          echo "-------------------------------------"
+          echo "🚨 DEBUG INFO START 🚨"
+          echo "HTTP Status Code: $HTTP_RESPONSE"
+          echo "Response Body (tmp/team-response.json):"
+          cat tmp/team-response.json
+          echo "🚨 DEBUG INFO END 🚨"
+          echo "-------------------------------------"
 
+          # Continue processing the response body
+          response=$(cat tmp/team-response.json)
           LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
 
           if [ -z "$LEAGUE_ID" ] || [ "$LEAGUE_ID" = "null" ]; then
-            echo "❌ Could not determine league ID. Exiting."
-            cat tmp/team-response.json
-            exit 1
+            echo "❌ Could not determine league ID."
+            echo "If the HTTP Status Code above is 401, 403, or 429, your API key or permissions are the issue."
+            exit 1 # Exit with 1 if parsing fails
           fi
 
           echo "✅ Detected League ID: $LEAGUE_ID"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
 
+      # The rest of the steps remain unchanged but will use the correct URL/Header
       - name: Fetch Last Season Standings for 3 Leagues
         run: |
           LAST_SEASON=$((SEASON - 1))
@@ -63,7 +73,6 @@ jobs:
 
           for LID in $LEAGUE_ID $ABOVE $BELOW; do
             echo "Fetching last season standings for league $LID"
-            # --- UPDATED API CALL ---
             RESPONSE=$(curl -s --request GET \
               --url "https://v3.api-football.com/standings?season=${LAST_SEASON}&league=${LID}" \
               --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
@@ -75,7 +84,6 @@ jobs:
       - name: Fetch All Fixtures for Team
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
-          # --- UPDATED API CALL ---
           FIXTURES=$(curl -s --request GET \
             --url "https://v3.api-football.com/fixtures?team=${TEAM_ID}&season=${SEASON}" \
             --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
@@ -85,12 +93,8 @@ jobs:
         run: |
           ICS_FILE=public/cal/fixtures.ics
           mkdir -p public/cal
+          LEAGUE_IDS="39 40 41 42 43 44" # Your League IDs
 
-          # List of league IDs to treat as regular league games
-          # Replace these IDs with your actual league IDs for Premier League, Championship, etc.
-          LEAGUE_IDS="39 40 41 42 43 44"
-
-          # Start calendar
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
