--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -1,4 +1,4 @@
-name: Update Rankings (DEBUG)
+name: Update Rankings
 
 on:
   schedule:
@@ -16,27 +16,44 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Detect League and Season
-        id: api_check
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
-
+          
           MONTH=$(date +%m)
           YEAR=$(date +%Y)
+          # Determine the current football season (runs Aug to May)
           if [ "$MONTH" -lt 8 ]; then
             SEASON=$((YEAR - 1))
           else
             SEASON=$YEAR
           fi
           echo "📅 Using season: $SEASON"
+          
           mkdir -p tmp
-
-          # --- DEBUGGING LINE ADDED: Capture HTTP status code (to check for 401/403) ---
-          # We use a temporary file to separate the body from the status code in one curl call
+          
+          # --- CORRECTED API CALL: New URL and Debugging ---
+          # Corrected URL to use the official API-Sports domain: v3.football.api-sports.io
+          # Header changed to x-apisports-key
+          
+          # Use a temporary file to separate the body from the status code in one curl call
           HTTP_RESPONSE=$(curl -s -o tmp/api-body.json -w "%{http_code}" \
             --request GET \
-            --url "https://v3.api-football.com/standings?season=${SEASON}&team=${TEAM_ID}" \
-            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
+            --url "https://v3.football.api-sports.io/standings?season=${SEASON}&team=${TEAM_ID}" \
+            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
+            --header "User-Agent: GitHub-Actions-Workflow/1.0")
 
+          # Check if the output file is empty (curl might fail before writing)
+          if [ ! -s tmp/api-body.json ]; then
+            echo "-------------------------------------"
+            echo "🚨 DEBUG INFO START 🚨"
+            echo "HTTP Status Code: $HTTP_RESPONSE (This may be empty if connection failed early)"
+            echo "Response Body (tmp/team-response.json): FILE IS EMPTY OR CURL FAILED."
+            echo "🚨 DEBUG INFO END 🚨"
+            echo "-------------------------------------"
+            echo "❌ Connection failed or API returned no data. Check your API_FOOTBALL_KEY or team ID."
+            exit 1 # Exit with 1 if file is empty
+          fi
+          
           # Rename the body file for the original jq command
           mv tmp/api-body.json tmp/team-response.json
           
@@ -47,22 +64,21 @@ jobs:
           cat tmp/team-response.json
           echo "🚨 DEBUG INFO END 🚨"
           echo "-------------------------------------"
-
+          
           # Continue processing the response body
           response=$(cat tmp/team-response.json)
           LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-
+          
           if [ -z "$LEAGUE_ID" ] || [ "$LEAGUE_ID" = "null" ]; then
-            echo "❌ Could not determine league ID."
-            echo "If the HTTP Status Code above is 401, 403, or 429, your API key or permissions are the issue."
-            exit 1 # Exit with 1 if parsing fails
+            echo "❌ Could not determine league ID. Exiting."
+            cat tmp/team-response.json
+            exit 1
           fi
-
+          
           echo "✅ Detected League ID: $LEAGUE_ID"
           echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
           echo "SEASON=$SEASON" >> $GITHUB_ENV
 
-      # The rest of the steps remain unchanged but will use the correct URL/Header
       - name: Fetch Last Season Standings for 3 Leagues
         run: |
           LAST_SEASON=$((SEASON - 1))
@@ -74,8 +90,9 @@ jobs:
           for LID in $LEAGUE_ID $ABOVE $BELOW; do
             echo "Fetching last season standings for league $LID"
             RESPONSE=$(curl -s --request GET \
-              --url "https://v3.api-football.com/standings?season=${LAST_SEASON}&league=${LID}" \
-              --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
+              --url "https://v3.football.api-sports.io/standings?season=${LAST_SEASON}&league=${LID}" \
+              --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
+              --header "User-Agent: GitHub-Actions-Workflow/1.0")
             echo "$RESPONSE" | jq . > "data/previous-season/league-${LID}.json"
           done
 
@@ -85,16 +102,21 @@ jobs:
         run: |
           TEAM_ID=$(cat ./assets/teamid.txt)
           FIXTURES=$(curl -s --request GET \
-            --url "https://v3.api-football.com/fixtures?team=${TEAM_ID}&season=${SEASON}" \
-            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}")
+            --url "https://v3.football.api-sports.io/fixtures?team=${TEAM_ID}&season=${SEASON}" \
+            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
+            --header "User-Agent: GitHub-Actions-Workflow/1.0")
           echo "$FIXTURES" | jq . > tmp/fixtures.json
 
       - name: Generate ICS for Team
         run: |
           ICS_FILE=public/cal/fixtures.ics
           mkdir -p public/cal
-          LEAGUE_IDS="39 40 41 42 43 44" # Your League IDs
 
+          # List of league IDs to treat as regular league games
+          # Replace these IDs with your actual league IDs for Premier League, Championship, etc.
+          LEAGUE_IDS="39 40 41 42 43 44"
+
+          # Start calendar
           echo "BEGIN:VCALENDAR" > $ICS_FILE
           echo "VERSION:2.0" >> $ICS_FILE
           echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
@@ -111,18 +133,18 @@ jobs:
               + "\nDTSTART:" + $dtstart_fmt
               + "\nDTEND:" + $dtend_fmt
               + "\nSUMMARY:" +
-                  ($fx.teams.home.name
-                    + (if $fx.fixture.status.short=="FT"
-                        then " \($fx.goals.home) v \($fx.goals.away) "
-                        else " v "
-                      end)
-                    + $fx.teams.away.name
-                  )
+                ( $fx.teams.home.name
+                  + (if $fx.fixture.status.short=="FT"
+                    then " \($fx.goals.home) v \($fx.goals.away) "
+                    else " v "
+                  end)
+                  + $fx.teams.away.name
+                )
                 + (if ($fx.league.id | tostring) as $id
                     | ($league_list | index($id)) | not
                   then " (\($fx.league.name))"
-                    else ""
-                  end)
+                  else ""
+                end)
               + "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD"))
               + "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown")
               + "\nEND:VEVENT"
