--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -1,4 +1,6 @@
-name: Update Rankings
+# This workflow scrapes the BBC Sport website for football standings and fixtures.
+
+name: Update Rankings (BBC Scraper)
 
 on:
   schedule:
@@ -9,157 +11,88 @@ permissions:
   contents: write
 
 jobs:
-  detect-and-rank:
+  scrape-and-rank:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      - name: Detect League and Season
-        run: |
-          TEAM_ID=$(cat ./assets/teamid.txt)
-          
-          MONTH=$(date +%m)
-          YEAR=$(date +%Y)
-          # Determine the current football season (runs Aug to May)
-          if [ "$MONTH" -lt 8 ]; then
-            SEASON=$((YEAR - 1))
-          else
-            SEASON=$YEAR
-          fi
-          echo "📅 Using season: $SEASON"
-          
-          mkdir -p tmp
-          
-          # --- CORRECTED API CALL: New URL and Debugging ---
-          # Corrected URL to use the official API-Sports domain: v3.football.api-sports.io
-          # Header changed to x-apisports-key
-          
-          # Use a temporary file to separate the body from the status code in one curl call
-          HTTP_RESPONSE=$(curl -s -o tmp/api-body.json -w "%{http_code}" \
-            --request GET \
-            --url "https://v3.football.api-sports.io/standings?season=${SEASON}&team=${TEAM_ID}" \
-            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
-            --header "User-Agent: GitHub-Actions-Workflow/1.0")
+      - name: Install pup (HTML Parser)
+        # pup is a powerful command-line HTML parser
+        run: sudo apt-get update && sudo apt-get install -y pup
 
-          # Check if the output file is empty (curl might fail before writing)
-          if [ ! -s tmp/api-body.json ]; then
-            echo "-------------------------------------"
-            echo "🚨 DEBUG INFO START 🚨"
-            echo "HTTP Status Code: $HTTP_RESPONSE (This may be empty if connection failed early)"
-            echo "Response Body (tmp/team-response.json): FILE IS EMPTY OR CURL FAILED."
-            echo "🚨 DEBUG INFO END 🚨"
-            echo "-------------------------------------"
-            echo "❌ Connection failed or API returned no data. Check your API_FOOTBALL_KEY or team ID."
-            exit 1 # Exit with 1 if file is empty
-          fi
-          
-          # Rename the body file for the original jq command
-          mv tmp/api-body.json tmp/team-response.json
-          
-          echo "-------------------------------------"
-          echo "🚨 DEBUG INFO START 🚨"
-          echo "HTTP Status Code: $HTTP_RESPONSE"
-          echo "Response Body (tmp/team-response.json):"
-          cat tmp/team-response.json
-          echo "🚨 DEBUG INFO END 🚨"
-          echo "-------------------------------------"
-          
-          # Continue processing the response body
-          response=$(cat tmp/team-response.json)
-          LEAGUE_ID=$(echo "$response" | jq -r '.response[0].league.id')
-          
-          if [ -z "$LEAGUE_ID" ] || [ "$LEAGUE_ID" = "null" ]; then
-            echo "❌ Could not determine league ID. Exiting."
-            cat tmp/team-response.json
+      - name: Load Configuration Variables
+        # Loads variables like TEAM_SLUG, LEAGUE_SLUG, etc., from config.env
+        run: |
+          if [ -f config.env ]; then
+            source config.env
+            echo "TEAM_SLUG=$TEAM_SLUG" >> $GITHUB_ENV
+            echo "LEAGUE_SLUG=$LEAGUE_SLUG" >> $GITHUB_ENV
+            echo "LEAGUE_NAME=$LEAGUE_NAME" >> $GITHUB_ENV
+            echo "CURRENT_SEASON=$CURRENT_SEASON" >> $GITHUB_ENV
+            echo "✅ Loaded config variables."
+          else
+            echo "❌ ERROR: config.env not found. Please create it and set variables."
             exit 1
           fi
+
+      - name: Scrape Standings Table (Current League)
+        # Scrapes the BBC table and uses 'pup' to output clean JSON structure
+        run: |
+          mkdir -p tmp data
+
+          STANDINGS_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/table"
+          echo "🌐 Scraping standings from: $STANDINGS_URL"
+
+          # Fetch HTML and use pup to target the main standings table rows
+          # We extract the entire row content and convert it to JSON structure
+          curl -s "$STANDINGS_URL" | pup 'table.ssrcss-1q3n90n-Table.exw0g190 tr.ssrcss-1hplq7p-TableRow.exw0g191:not(.ssrcss-1b7736g-HeaderRow.exw0g192) json{}' > tmp/scraped-standings-raw.json
+
+          if [ ! -s tmp/scraped-standings-raw.json ]; then
+            echo "❌ Scraping failed or returned empty data. Check if the LEAGUE_SLUG is correct or if BBC updated their HTML."
+            exit 1
+          fi
+
+      - name: Format Standings Data
+        # Uses JQ to process the raw scraped JSON into a clean output format
+        run: |
+          TEAM_SLUG="${{ env.TEAM_SLUG }}"
+
+          jq -r --arg teamSlug "$TEAM_SLUG" '
+            [
+              .[] |
+              .children |
+              # Create a map of column headers to their corresponding cell content for easier parsing
+              {
+                "rank": .[0].children[0].children[0].text, # Rank (1)
+                "team_name": .[1].children[0].children[1].children[0].text, # Team Name (Cardiff City)
+                "team_slug": .[1].children[0].children[1].attributes.href | split("/")[-1], # Team Slug (cardiff-city)
+                "played": .[2].text,
+                "won": .[3].text,
+                "drawn": .[4].text,
+                "lost": .[5].text,
+                "goals_for": .[6].text,
+                "goals_against": .[7].text,
+                "goal_difference": .[8].text,
+                "points": .[9].text,
+                "highlight": (if .[1].children[0].children[1].attributes.href | split("/")[-1] == $teamSlug then true else false end)
+              }
+            ]
+          ' tmp/scraped-standings-raw.json > data/standings.json
+
+          # Save league info (now used from config)
+          echo "{\"league_name\": \"${{ env.LEAGUE_NAME }}\", \"season\": \"${{ env.CURRENT_SEASON }}\"}" > data/league-info.json
           
-          echo "✅ Detected League ID: $LEAGUE_ID"
-          echo "LEAGUE_ID=$LEAGUE_ID" >> $GITHUB_ENV
-          echo "SEASON=$SEASON" >> $GITHUB_ENV
+          echo "✅ Standings data generated in data/standings.json"
 
-      - name: Fetch Last Season Standings for 3 Leagues
-        run: |
-          LAST_SEASON=$((SEASON - 1))
-          ABOVE=$((LEAGUE_ID - 1))
-          BELOW=$((LEAGUE_ID + 1))
-
-          mkdir -p data/previous-season
-
-          for LID in $LEAGUE_ID $ABOVE $BELOW; do
-            echo "Fetching last season standings for league $LID"
-            RESPONSE=$(curl -s --request GET \
-              --url "https://v3.football.api-sports.io/standings?season=${LAST_SEASON}&league=${LID}" \
-              --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
-              --header "User-Agent: GitHub-Actions-Workflow/1.0")
-            echo "$RESPONSE" | jq . > "data/previous-season/league-${LID}.json"
-          done
-
-          echo "{\"league_id\": $LEAGUE_ID, \"season\": $SEASON}" > data/league-info.json
-
-      - name: Fetch All Fixtures for Team
-        run: |
-          TEAM_ID=$(cat ./assets/teamid.txt)
-          FIXTURES=$(curl -s --request GET \
-            --url "https://v3.football.api-sports.io/fixtures?team=${TEAM_ID}&season=${SEASON}" \
-            --header "x-apisports-key: ${{ secrets.API_FOOTBALL_KEY }}" \
-            --header "User-Agent: GitHub-Actions-Workflow/1.0")
-          echo "$FIXTURES" | jq . > tmp/fixtures.json
-
-      - name: Generate ICS for Team
-        run: |
-          ICS_FILE=public/cal/fixtures.ics
-          mkdir -p public/cal
-
-          # List of league IDs to treat as regular league games
-          # Replace these IDs with your actual league IDs for Premier League, Championship, etc.
-          LEAGUE_IDS="39 40 41 42 43 44"
-
-          # Start calendar
-          echo "BEGIN:VCALENDAR" > $ICS_FILE
-          echo "VERSION:2.0" >> $ICS_FILE
-          echo "PRODID:-//GitHub Actions//Football Fixtures//EN" >> $ICS_FILE
-
-          jq -r --arg leagues "$LEAGUE_IDS" '
-            .response[]
-            | . as $fx
-            | ($fx.fixture.date | sub("\\+00:00$"; "Z") | fromdate) as $start_ts
-            | ($start_ts | strftime("%Y%m%dT%H%M%SZ")) as $dtstart_fmt
-            | ($start_ts + 7200 | strftime("%Y%m%dT%H%M%SZ")) as $dtend_fmt
-            | ($leagues | split(" ")) as $league_list
-            | "BEGIN:VEVENT\nUID:\($fx.fixture.id)@\($fx.league.id).football"
-              + "\nDTSTAMP:" + (now|strftime("%Y%m%dT%H%M%SZ"))
-              + "\nDTSTART:" + $dtstart_fmt
-              + "\nDTEND:" + $dtend_fmt
-              + "\nSUMMARY:" +
-                ( $fx.teams.home.name
-                  + (if $fx.fixture.status.short=="FT"
-                    then " \($fx.goals.home) v \($fx.goals.away) "
-                    else " v "
-                  end)
-                  + $fx.teams.away.name
-                )
-                + (if ($fx.league.id | tostring) as $id
-                    | ($league_list | index($id)) | not
-                  then " (\($fx.league.name))"
-                  else ""
-                end)
-              + "\nDESCRIPTION:" + ("Referee: " + ($fx.fixture.referee // "TBD"))
-              + "\nLOCATION:" + ($fx.fixture.venue.name // "Unknown")
-              + "\nEND:VEVENT"
-          ' tmp/fixtures.json >> $ICS_FILE
-
-          echo "END:VCALENDAR" >> $ICS_FILE
-
-      - name: Commit and Push
+      - name: Commit and Push Standings
         run: |
           git config user.name "github-actions"
           git config user.email "github-actions@users.noreply.github.com"
-          git add data/league-info.json data/previous-season/ public/cal/fixtures.ics
+          git add data/standings.json data/league-info.json
           if git diff --cached --quiet; then
             echo "🟢 No changes to commit."
           else
-            git commit -m "Update league info, standings, and team fixtures"
+            git commit -m "Scraper: Update current standings for ${{ env.LEAGUE_NAME }} (${{ env.CURRENT_SEASON }})"
             git push
           fi
