--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
+      - name: Install Python Dependencies
+        run: pip install beautifulsoup4
+
       - name: Load Configuration Variables
         id: load_config
         run: |
@@ -24,8 +27,8 @@ jobs:
             echo "TEAM_NAME=$TEAM_NAME" >> $GITHUB_ENV
             echo "LEAGUE_URL=$LEAGUE_URL" >> $GITHUB_ENV
             echo "FIXTURES_URL=$FIXTURES_URL" >> $GITHUB_ENV
-            echo "SEASON=$SEASON" >> $GITHUB_ENV # e.g., 2025/26
-            echo "LEAGUE_ID_NAME=$LEAGUE_ID_NAME" >> $GITHUB_ENV # e.g., LeagueOne
+            echo "SEASON=$SEASON" >> $GITHUB_ENV
+            echo "LEAGUE_ID_NAME=$LEAGUE_ID_NAME" >> $GITHUB_ENV
           else
             echo "❌ ERROR: config.env file not found. Please create it."
             exit 1
@@ -40,11 +43,14 @@ jobs:
           curl -s "$LEAGUE_URL" -o tmp/bbc-standings.html
           
           # 2. Python script to find the specific table and parse it into JSON
-          # We are targeting the table with class ssrcss-1q3n90n-Table (common BBC class)
           python3 - <<EOF
 import json
 from bs4 import BeautifulSoup
 import sys
+import os
+
+LEAGUE_ID_NAME = os.environ.get('LEAGUE_ID_NAME', 'League')
+SEASON = os.environ.get('SEASON', 'Unknown')
 
 try:
     with open('tmp/bbc-standings.html', 'r', encoding='utf-8') as f:
@@ -54,30 +60,39 @@ except FileNotFoundError:
     sys.exit(1)
 
 soup = BeautifulSoup(html_content, 'html.parser')
-# BBC often uses a table with a generic or complex class for standings
-# Searching for the specific table element containing the ranks
-standings_table = soup.find('table', class_=lambda c: c and 'ssrcss' in c and 'table' in c.lower())
+# --- CRITICAL: Find the table ---
+# BBC standings table often has a complex structure. We search for the main table.
+standings_table = soup.find('table', class_=lambda c: c and ('table' in c.lower() and 'ssrcss' in c))
 
 if not standings_table:
     print("Error: Could not find the main standings table (check BBC class names).")
-    # Output the fetched HTML for debugging if the table is missing
-    # print(html_content[:2000]) 
+    # Write the start of the fetched HTML to a temp file for debugging
+    with open('tmp/debug_html_start.txt', 'w') as dbg:
+        dbg.write(html_content[:2000]) 
+    print("A debug file 'tmp/debug_html_start.txt' was created to inspect the fetched content.")
     sys.exit(1)
 
 data_list = []
 # Iterate over all table rows (skipping the header row [0])
-for row in standings_table.find('tbody').find_all('tr'):
+tbody = standings_table.find('tbody')
+if not tbody:
+    print("Error: Table body not found.")
+    sys.exit(1)
+    
+for row in tbody.find_all('tr'):
     cols = row.find_all(['th', 'td'])
     
-    # We expect 11 columns: Rank, Team, Played, Won, Drawn, Lost, GF, GA, GD, Pts, Form
+    # We expect at least 10 columns for a full standings row
     if len(cols) < 10:
-        continue # Skip rows that don't look like team data
+        continue 
 
     try:
+        # Extract team name, which is usually inside a span with a specific class
         team_name_element = cols[1].find('span', class_='ssrcss-1c9v1s-Name')
         team_name = team_name_element.get_text(strip=True) if team_name_element else cols[1].get_text(strip=True)
         
         # --- Map data to a simple structure ---
+        # Data is extracted using column index (0=Rank, 1=Team, 2=Played, 9=Points)
         team_data = {
             "rank": int(cols[0].get_text(strip=True)),
             "team_name": team_name,
@@ -89,8 +104,6 @@ for row in standings_table.find('tbody').find_all('tr'):
             "goals_against": int(cols[7].get_text(strip=True)),
             "goal_difference": int(cols[8].get_text(strip=True)),
             "points": int(cols[9].get_text(strip=True)),
-            # Assuming team ID is not strictly needed for basic ranking display
-            # We will use the name for matching (Cardiff City)
         }
         data_list.append(team_data)
         
@@ -98,11 +111,11 @@ for row in standings_table.find('tbody').find_all('tr'):
         print(f"Skipping row due to parsing error: {e}")
         continue
 
-# Create a simplified JSON structure mirroring the API-Football output for later compatibility
+# Create a simplified JSON structure for the output
 final_json = {
     "league_info": {
-        "name": "$LEAGUE_ID_NAME",
-        "season": "$SEASON"
+        "name": LEAGUE_ID_NAME,
+        "season": SEASON
     },
     "standings": data_list
 }
@@ -112,17 +125,14 @@ with open('data/standings.json', 'w') as outfile:
     
 print("✅ Standings JSON generated successfully: data/standings.json")
 EOF
-        
+
       - name: Fetch Upcoming Fixtures
         run: |
-          # Fetch fixtures page HTML
-          echo "Fetching fixtures from $FIXTURES_URL"
-          curl -s "$FIXTURES_URL" -o tmp/bbc-fixtures.html
-
-          # No full ICS generation for now, just saving the HTML for future ICS work
+          # Fetch fixtures page HTML for future processing
           mkdir -p public/cal
-          cp tmp/bbc-fixtures.html public/cal/fixtures.html
-          echo "Future ICS calendar file saved as public/cal/fixtures.html (HTML source)"
+          echo "Fetching fixtures from $FIXTURES_URL"
+          curl -s "$FIXTURES_URL" -o public/cal/fixtures.html
+          echo "Future ICS calendar source saved as public/cal/fixtures.html"
 
 
       - name: Generate League Info File
