--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -16,14 +16,17 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Python Dependencies
+        # BeautifulSoup is required for HTML parsing
         run: pip install beautifulsoup4
 
       - name: Load Configuration Variables
         id: load_config
+        # Source the config file to load variables into the shell environment
         run: |
           if [[ -f "./config.env" ]]; then
             echo "Loading variables from config.env"
             source ./config.env
+            # Set variables as GitHub environment variables for subsequent steps
             echo "TEAM_NAME=$TEAM_NAME" >> $GITHUB_ENV
             echo "LEAGUE_URL=$LEAGUE_URL" >> $GITHUB_ENV
             echo "FIXTURES_URL=$FIXTURES_URL" >> $GITHUB_ENV
@@ -35,6 +38,7 @@ jobs:
           fi
 
       - name: Fetch and Parse Standings Table (Python Scraper)
+        # Uses python3 which is pre-installed on the runner
         run: |
           mkdir -p data tmp
           
@@ -43,12 +47,14 @@ jobs:
           curl -s "$LEAGUE_URL" -o tmp/bbc-standings.html
           
           # 2. Python script to find the specific table and parse it into JSON
+          # We use "cat <<EOF" to run a multiline script safely
           python3 - <<EOF
 import json
 from bs4 import BeautifulSoup
 import sys
 import os
 
+# Retrieve environment variables set in the previous step
 LEAGUE_ID_NAME = os.environ.get('LEAGUE_ID_NAME', 'League')
 SEASON = os.environ.get('SEASON', 'Unknown')
 
@@ -60,41 +66,44 @@ except FileNotFoundError:
     sys.exit(1)
 
 soup = BeautifulSoup(html_content, 'html.parser')
-# --- CRITICAL: Find the table ---
-# BBC standings table often has a complex structure. We search for the main table.
+
+# --- CRITICAL: Find the main standings table ---
+# BBC tables often have classes containing 'table' and a generated ssrcss unique identifier.
 standings_table = soup.find('table', class_=lambda c: c and ('table' in c.lower() and 'ssrcss' in c))
 
 if not standings_table:
     print("Error: Could not find the main standings table (check BBC class names).")
-    # Write the start of the fetched HTML to a temp file for debugging
+    # Log the fetched content for manual inspection if scraping fails
     with open('tmp/debug_html_start.txt', 'w') as dbg:
-        dbg.write(html_content[:2000]) 
-    print("A debug file 'tmp/debug_html_start.txt' was created to inspect the fetched content.")
+        dbg.write("HTML CONTENT START\n" + html_content[:4000]) 
+    print("A debug file 'tmp/debug_html_start.txt' was created to inspect the fetched content. Check your logs.")
     sys.exit(1)
 
 data_list = []
-# Iterate over all table rows (skipping the header row [0])
 tbody = standings_table.find('tbody')
+
 if not tbody:
     print("Error: Table body not found.")
     sys.exit(1)
     
 for row in tbody.find_all('tr'):
+    # Find all table data cells (th for rank, td for stats)
     cols = row.find_all(['th', 'td'])
     
-    # We expect at least 10 columns for a full standings row
+    # Ensure it's a full data row (expected 10+ columns)
     if len(cols) < 10:
         continue 
 
     try:
-        # Extract team name, which is usually inside a span with a specific class
+        # Extract Rank from the first cell (cols[0])
+        rank_text = cols[0].get_text(strip=True)
+        # Extract Team Name from the second cell (cols[1]) - handles nested spans
         team_name_element = cols[1].find('span', class_='ssrcss-1c9v1s-Name')
         team_name = team_name_element.get_text(strip=True) if team_name_element else cols[1].get_text(strip=True)
         
-        # --- Map data to a simple structure ---
-        # Data is extracted using column index (0=Rank, 1=Team, 2=Played, 9=Points)
+        # --- Map data structure ---
         team_data = {
-            "rank": int(cols[0].get_text(strip=True)),
+            "rank": int(rank_text),
             "team_name": team_name,
             "played": int(cols[2].get_text(strip=True)),
             "won": int(cols[3].get_text(strip=True)),
@@ -109,9 +118,10 @@ for row in tbody.find_all('tr'):
         
     except Exception as e:
         print(f"Skipping row due to parsing error: {e}")
+        # Note: If this happens often, the column indexing is wrong.
         continue
 
-# Create a simplified JSON structure for the output
+# Create final JSON output structure
 final_json = {
     "league_info": {
         "name": LEAGUE_ID_NAME,
@@ -126,18 +136,17 @@ with open('data/standings.json', 'w') as outfile:
 print("✅ Standings JSON generated successfully: data/standings.json")
 EOF
 
-      - name: Fetch Upcoming Fixtures
+      - name: Fetch Upcoming Fixtures (HTML)
         run: |
-          # Fetch fixtures page HTML for future processing
+          # Fetch fixtures page HTML for future processing (e.g., ICS file creation)
           mkdir -p public/cal
           echo "Fetching fixtures from $FIXTURES_URL"
           curl -s "$FIXTURES_URL" -o public/cal/fixtures.html
           echo "Future ICS calendar source saved as public/cal/fixtures.html"
 
-
       - name: Generate League Info File
         run: |
-          # This file is crucial for the second workflow
+          # This is the dependency for the second workflow (update_standings)
           echo "{\"league_id\": \"$LEAGUE_ID_NAME\", \"season\": \"$SEASON\"}" > data/league-info.json
 
       - name: Commit and Push
